Modified #navBar in index.css to have a fixed position and white background (it was translucent and showing elements behind it when scrolling)

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -60,6 +60,7 @@
 
 .newsfeed {
 	box-sizing: border-box;
+	gap: 20px;
 	display: flex;
 	flex-direction: column;
 	width: 100%;
@@ -68,9 +69,9 @@
 	justify-content: center;
 	align-items: center;
 	margin: 20px;
-	background-color: var(--component-cards-color);
-	border-radius: 7px;
-	box-shadow: 1px 1px 5px rgb(228, 228, 228);
+	/* background-color: var(--component-cards-color); */
+	/* border-radius: 7px;
+	box-shadow: 1px 1px 5px rgb(228, 228, 228); */
 }
 
 .pageLayout {
